--- a/Faces.ipynb
+++ b/Faces.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Почему-то у меня не работает !wget, поэтому вот так загружаю данные"
    ]
   },
   {
@@ -48,6 +49,11 @@
     {
      "name": "stdout",
      "output_type": "stream",
+     "text": [
+      "Доступные устройства для CUDA:\n",
+      "Устройство 0: NVIDIA GeForce RTX 3060 Laptop GPU\n",
+      "Версия CUDA: 11.8\n"
+     ]
     }
    ],
    "source": [
