--- a/Faces.ipynb
+++ b/Faces.ipynb
@@ -1088,5 +1088,270 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Оптимизация гиперпараметров"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выполнить оптимизацию гиперпараметров: архитектуры сети, learning rate, количества нейронов и размеров фильтров."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch.utils.data import DataLoader, SubsetRandomSampler\n",
+    "from torchvision import datasets, transforms\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "\n",
+    "data_transforms = transforms.Compose([\n",
+    "    transforms.Resize((128, 128)),   \n",
+    "    transforms.ToTensor(),            \n",
+    "    transforms.Normalize(mean=[0.5, 0.5, 0.5], std=[0.5, 0.5, 0.5])  \n",
+    "])\n",
+    "\n",
+    "\n",
+    "data_dir = \"petfaces\"\n",
+    "\n",
+    "image_dataset = datasets.ImageFolder(root=data_dir, transform=data_transforms)\n",
+    "\n",
+    "train_indices, test_indices = train_test_split(list(range(len(image_dataset))), test_size=0.2, stratify=image_dataset.targets, random_state=42)\n",
+    "\n",
+    "train_sampler = SubsetRandomSampler(train_indices)\n",
+    "test_sampler = SubsetRandomSampler(test_indices)\n",
+    "\n",
+    "batch_size = 32\n",
+    "train_loader = DataLoader(image_dataset, batch_size=batch_size, sampler=train_sampler)\n",
+    "test_loader = DataLoader(image_dataset, batch_size=batch_size, sampler=test_sampler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class MultiClassClassifier(nn.Module):\n",
+    "    def __init__(self, num_classes, architecture=(3, 32, 64, 128), kernel_sizes=(3, 3, 3), pool_size=2, fc_size=512, lr=0.001):\n",
+    "        super(MultiClassClassifier, self).__init__()\n",
+    "\n",
+    "        in_channels, conv1_channels, conv2_channels, conv3_channels = architecture\n",
+    "        conv1_kernel, conv2_kernel, conv3_kernel = kernel_sizes\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(in_channels, conv1_channels, kernel_size=conv1_kernel, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(conv1_channels, conv2_channels, kernel_size=conv2_kernel, padding=1)\n",
+    "        self.conv3 = nn.Conv2d(conv2_channels, conv3_channels, kernel_size=conv3_kernel, padding=1)\n",
+    "        self.pool = nn.MaxPool2d(pool_size, pool_size)\n",
+    "        self.fc1 = nn.Linear(conv3_channels * 16 * 16, fc_size)\n",
+    "        self.fc2 = nn.Linear(fc_size, num_classes)\n",
+    "\n",
+    "        self.lr = lr\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.pool(F.relu(self.conv1(x)))\n",
+    "        x = self.pool(F.relu(self.conv2(x)))\n",
+    "        x = self.pool(F.relu(self.conv3(x)))\n",
+    "        x = x.view(-1, self.num_flat_features(x))\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "    def num_flat_features(self, x):\n",
+    "        size = x.size()[1:]  \n",
+    "        num_features = 1\n",
+    "        for s in size:\n",
+    "            num_features *= s\n",
+    "        return num_features\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] Train Accuracy: 4 % | Test Accuracy: 5 % |\n",
+      "[2] Train Accuracy: 16 % | Test Accuracy: 12 % |\n",
+      "[3] Train Accuracy: 30 % | Test Accuracy: 22 % |\n",
+      "[4] Train Accuracy: 45 % | Test Accuracy: 30 % |\n",
+      "[5] Train Accuracy: 56 % | Test Accuracy: 30 % |\n",
+      "For architecture = (3, 32, 64, 128), kernel_size = (3, 3, 3), fc_size = 512, lr = 0.01 Max Test Accuracy: 0.30637636080870917\n",
+      "[1] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[2] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[3] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[4] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[5] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "For architecture = (3, 32, 64, 128), kernel_size = (3, 3, 3), fc_size = 1024, lr = 0.01 Max Test Accuracy: 0.05598755832037325\n",
+      "[1] Train Accuracy: 33 % | Test Accuracy: 26 % |\n",
+      "[2] Train Accuracy: 61 % | Test Accuracy: 39 % |\n",
+      "[3] Train Accuracy: 78 % | Test Accuracy: 42 % |\n",
+      "[4] Train Accuracy: 95 % | Test Accuracy: 47 % |\n",
+      "[5] Train Accuracy: 98 % | Test Accuracy: 49 % |\n",
+      "For architecture = (3, 32, 64, 128), kernel_size = (3, 3, 3), fc_size = 512, lr = 0.001 Max Test Accuracy: 0.49922239502332816\n",
+      "[1] Train Accuracy: 35 % | Test Accuracy: 27 % |\n",
+      "[2] Train Accuracy: 70 % | Test Accuracy: 45 % |\n",
+      "[3] Train Accuracy: 86 % | Test Accuracy: 49 % |\n",
+      "[4] Train Accuracy: 96 % | Test Accuracy: 50 % |\n",
+      "[5] Train Accuracy: 99 % | Test Accuracy: 51 % |\n",
+      "For architecture = (3, 32, 64, 128), kernel_size = (3, 3, 3), fc_size = 1024, lr = 0.001 Max Test Accuracy: 0.5116640746500778\n",
+      "[1] Train Accuracy: 14 % | Test Accuracy: 12 % |\n",
+      "[2] Train Accuracy: 40 % | Test Accuracy: 24 % |\n",
+      "[3] Train Accuracy: 57 % | Test Accuracy: 29 % |\n",
+      "[4] Train Accuracy: 79 % | Test Accuracy: 32 % |\n",
+      "[5] Train Accuracy: 87 % | Test Accuracy: 28 % |\n",
+      "For architecture = (3, 64, 128, 256), kernel_size = (3, 3, 3), fc_size = 512, lr = 0.01 Max Test Accuracy: 0.3250388802488336\n",
+      "[1] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[2] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[3] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[4] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "[5] Train Accuracy: 5 % | Test Accuracy: 5 % |\n",
+      "For architecture = (3, 64, 128, 256), kernel_size = (3, 3, 3), fc_size = 1024, lr = 0.01 Max Test Accuracy: 0.05598755832037325\n",
+      "[1] Train Accuracy: 32 % | Test Accuracy: 24 % |\n",
+      "[2] Train Accuracy: 64 % | Test Accuracy: 44 % |\n",
+      "[3] Train Accuracy: 83 % | Test Accuracy: 49 % |\n",
+      "[4] Train Accuracy: 95 % | Test Accuracy: 48 % |\n",
+      "[5] Train Accuracy: 98 % | Test Accuracy: 53 % |\n",
+      "For architecture = (3, 64, 128, 256), kernel_size = (3, 3, 3), fc_size = 512, lr = 0.001 Max Test Accuracy: 0.5318818040435459\n",
+      "[1] Train Accuracy: 28 % | Test Accuracy: 21 % |\n",
+      "[2] Train Accuracy: 57 % | Test Accuracy: 37 % |\n",
+      "[3] Train Accuracy: 89 % | Test Accuracy: 49 % |\n",
+      "[4] Train Accuracy: 97 % | Test Accuracy: 49 % |\n",
+      "[5] Train Accuracy: 99 % | Test Accuracy: 50 % |\n",
+      "For architecture = (3, 64, 128, 256), kernel_size = (3, 3, 3), fc_size = 1024, lr = 0.001 Max Test Accuracy: 0.5023328149300156\n",
+      "Finished Training\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.optim as optim\n",
+    "\n",
+    "num_classes = len(train_loader)\n",
+    "architectures = [(3, 32, 64, 128), (3, 64, 128, 256)]   \n",
+    "kernel_sizes = [(3, 3, 3)]\n",
+    "fc_sizes = [512, 1024] \n",
+    "learning_rates  = [0.01, 0.001]\n",
+    "\n",
+    "\n",
+    "for architecture in architectures:\n",
+    "    for lr in learning_rates:\n",
+    "        for fc_size in fc_sizes:\n",
+    "            for kernel_size in kernel_sizes:\n",
+    "\n",
+    "                model = MultiClassClassifier(num_classes, architecture=architecture, kernel_sizes=kernel_size, pool_size=2, fc_size=fc_size, lr=lr)\n",
+    "                max_test = 0\n",
+    "                device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "                model.to(device)\n",
+    "\n",
+    "                criterion = nn.CrossEntropyLoss()\n",
+    "                optimizer = optim.Adam(model.parameters(), lr=lr)\n",
+    "\n",
+    "\n",
+    "                num_epochs = 5\n",
+    "                for epoch in range(num_epochs):\n",
+    "                    running_loss = 0.0\n",
+    "                    for i, data in enumerate(train_loader, 0):\n",
+    "                        inputs, labels = data\n",
+    "                        inputs, labels = inputs.to(device), labels.to(device)  \n",
+    "\n",
+    "                        optimizer.zero_grad()\n",
+    "\n",
+    "                        outputs = model(inputs)\n",
+    "                        loss = criterion(outputs, labels)\n",
+    "                        loss.backward()\n",
+    "                        optimizer.step()\n",
+    "\n",
+    "                        running_loss += loss.item()\n",
+    "\n",
+    "\n",
+    "\n",
+    "                    correct_train = 0\n",
+    "                    total_train = 0\n",
+    "                    with torch.no_grad():\n",
+    "                        for data in train_loader:\n",
+    "                            images, labels = data\n",
+    "                            images, labels = images.to(device), labels.to(device)\n",
+    "                            outputs = model(images)\n",
+    "                            _, predicted = torch.max(outputs.data, 1)\n",
+    "                            total_train += labels.size(0)\n",
+    "                            correct_train += (predicted == labels).sum().item()\n",
+    "\n",
+    "\n",
+    "                    correct_test = 0\n",
+    "                    total_test = 0\n",
+    "                    with torch.no_grad():\n",
+    "                        for data in test_loader:\n",
+    "                            images, labels = data\n",
+    "                            images, labels = images.to(device), labels.to(device)\n",
+    "                            outputs = model(images)\n",
+    "                            _, predicted = torch.max(outputs.data, 1)\n",
+    "                            total_test += labels.size(0)\n",
+    "                            correct_test += (predicted == labels).sum().item()\n",
+    "\n",
+    "                    if max_test < correct_test / total_test:\n",
+    "                        max_test = correct_test / total_test\n",
+    "\n",
+    "                    print('[%d] Train Accuracy: %d %% | Test Accuracy: %d %% |' % (epoch + 1, 100 * correct_train / total_train, 100 * correct_test / total_test))\n",
+    "                print(f'For architecture = {architecture}, kernel_size = {kernel_size}, fc_size = {fc_size}, lr = {lr} Max Test Accuracy: {max_test}')\n",
+    "\n",
+    "print('Finished Training')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Лучший набор гиперпараметров: \n",
+    "- входной канал имеет размер 3, а сеть состоит из трех последовательных сверточных слоев с количеством фильтров 64, 128 и 256 соответственно.\n",
+    "- (3, 3, 3) указывает на размеры ядер свертки для каждого сверточного слоя. \n",
+    "- 512 означает, что размер скрытого слоя полносвязного слоя составляет 512 нейронов. \n",
+    "- lr = 0.001\n",
+    "\n",
+    "`Max Test Accuracy: 0.5318818040435459`"
+   ]
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.9.12 ('base')",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d21c24a7952cc9fa93a33c3da71b373ffe761d6ab0c9cc9b2153e31da51ffb58"
+   }
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
